--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -5,14 +5,10 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 
-
-<GridPane alignment="center" hgap="10" vgap="10" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="sample.Controller">
-   <children>
-      <Canvas fx:id="barcanvas" height="400.0" width="500.0" />
-      <Pane prefHeight="54.0" prefWidth="200.0" GridPane.rowIndex="1">
-         <children>
-            <Button fx:id="stepbutton" layoutX="75.0" layoutY="12.0" mnemonicParsing="false" onAction="#DoStep" text="Step" />
-         </children>
-      </Pane>
-   </children>
+<GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.112"
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+   <Canvas fx:id="barcanvas" height="400.0" width="500.0"/>
+   <Pane prefHeight="54.0" prefWidth="200.0" GridPane.rowIndex="1">
+      <Button layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onAction="#DoStep" text="Step"/>
+   </Pane>
 </GridPane>
