--- a/src/GUI/sample.fxml
+++ b/src/GUI/sample.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.Pane?>
 
 <GridPane alignment="center" hgap="10" vgap="10" xmlns="http://javafx.com/javafx/8.0.112"
-          xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.Controller">
+          xmlns:fx="http://javafx.com/fxml/1" fx:controller="GUI.Controller">
    <Canvas fx:id="barcanvas" height="400.0" width="500.0"/>
    <Pane prefHeight="54.0" prefWidth="200.0" GridPane.rowIndex="1">
       <Button layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onAction="#DoStep" text="Step"/>
