--- a/src/res/Controls.fxml
+++ b/src/res/Controls.fxml
@@ -19,5 +19,5 @@
             </FXCollections>
         </items>
     </ComboBox>
-    <Button fx:id="sortbutton" layoutX="16.0" layoutY="66.0" mnemonicParsing="false" onAction="#DoCompleteSort" text="sort"/>
+    <Button fx:id="sortbutton" layoutX="16.0" layoutY="66.0" mnemonicParsing="false" onAction="#DoCompleteSort" text="BubbleSorter"/>
 </Pane>
