--- a/src/GUI/sample.fxml
+++ b/src/GUI/sample.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
@@ -23,7 +24,8 @@
                 </FXCollections>
             </items>
         </ComboBox>
-      <Button fx:id="sortbutton" onAction="#DoCompleteSort" layoutX="185.0" layoutY="12.0" mnemonicParsing="false" text="sort" />
+      <Button fx:id="sortbutton" layoutX="73.0" layoutY="12.0" mnemonicParsing="false" onAction="#DoCompleteSort" text="sort" />
+      <TextField fx:id="intervaltext" text="time(ms) default:100" layoutX="136.0" layoutY="12.0" />
     </Pane>
     <columnConstraints>
         <ColumnConstraints />
