--- a/src/res/Controls.fxml
+++ b/src/res/Controls.fxml
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.collections.FXCollections?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
-<?import java.lang.String?>
-<Pane prefHeight="132.0" prefWidth="500.0" GridPane.rowIndex="1" xmlns="http://javafx.com/javafx/8.0.112"
-      xmlns:fx="http://javafx.com/fxml/1">
-    <Button layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onAction="#DoStep" text="Step"/>
-    <ComboBox fx:id="sortselector" layoutX="336.0" layoutY="12.0" onAction="#SetSortString" prefWidth="150.0"
-              promptText="BubbleSort">
+
+<Pane prefHeight="132.0" prefWidth="500.0" GridPane.rowIndex="1" xmlns="http://javafx.com/javafx/8.0.112" xmlns:fx="http://javafx.com/fxml/1">
+    <Button layoutX="14.0" layoutY="12.0" mnemonicParsing="false" onAction="#DoStep" text="Step" />
+    <ComboBox fx:id="sortselector" layoutX="336.0" layoutY="12.0" onAction="#SetSortString" prefWidth="150.0" promptText="BubbleSort">
         <items>
             <FXCollections fx:factory="observableArrayList">
-                <String fx:value="BubbleSort"/>
-                <String fx:value="InsertionSort"/>
-                <String fx:value="QuickSort"/>
+                <String fx:value="BubbleSort" />
+                <String fx:value="InsertionSort" />
+                <String fx:value="QuickSort" />
             </FXCollections>
         </items>
     </ComboBox>
-    <Button fx:id="sortbutton" layoutX="16.0" layoutY="66.0" mnemonicParsing="false" onAction="#DoCompleteSort" text="Complete sort"/>
+    <Button fx:id="sortbutton" layoutX="16.0" layoutY="66.0" mnemonicParsing="false" onAction="#DoCompleteSort" text="Complete sort" />
+   <TextField fx:id="intervaltext" layoutX="139.0" layoutY="66.0" onAction="#setInterval" text="interval(ms) default:100" />
 </Pane>
